commit: new style class to javascript

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -33,3 +33,9 @@ input[type="radio"]:checked + label{
     pointer-events: none;
     opacity: 0.5;
 }
+
+.js-haveCompletedGoal{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
